--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,14 @@ cache:
 jobs:
   include:
     - stage: prepare cache
-      before_install: skip
-      install: skip
       env: UPDATING_CACHE
-      script:
+      before_install: skip
+      install:
         - sudo apt-get -qq -y install libboost-dev libboost-iostreams-dev libboost-filesystem-dev
             libboost-program-options-dev libboost-system-dev
         - make -j4
         - make -j4 emake
+      script: skip
       before_cache:
         - mv libcompileEGMf.so cache/libcompileEGMf.so
         - mv emake cache/emake
