--- a/.travis.yml
+++ b/.travis.yml
@@ -1,47 +1,19 @@
 sudo: required
 dist: trusty
-
 notifications:
   #irc: "chat.freenode.net#enigma"
-
 language: cpp
-
 compiler:
   - gcc
-
 git:
   depth: 1
-
 cache:
   directories:
-    - $TRAVIS_BUILD_DIR/cache
-
-jobs:
-  include:
-    - stage: prepare cache
-      env: UPDATING_CACHE
-      before_install: skip
-      install:
-        - sudo apt-get -qq -y install libboost-dev libboost-iostreams-dev libboost-filesystem-dev
-            libboost-program-options-dev libboost-system-dev
-        - make -j4
-        - make -j4 emake
-      script: skip
-      before_cache:
-        - stat libcompileEGMf.so
-        - stat emake
-        - mv libcompileEGMf.so cache/libcompileEGMf.so
-        - mv emake cache/emake
-        - stat cache/libcompileEGMf.so
-        - stat cache/emake
-stages:
-  - prepare cache
-  - test
-
+    - $HOME/cache
 before_install:
   # move our cached files back onto the relative path if they exist in the restored cache
-  - mv cache/libcompileEGMf.so ./
-  - mv cache/emake ./
+  - mv $HOME/cache/libcompileEGMf.so ./
+  - mv $HOME/cache/emake ./
   - sudo dpkg --add-architecture i386
   #- sudo apt-get -qq update
   #- sudo apt-get -qq -y install libglu1-mesa-dev
@@ -75,7 +47,6 @@ before_install:
   #- sudo ln -s /usr/lib/i386-linux-gnu/libX11.so.6 /usr/lib/i386-linux-gnu/libX11.so
   #- sudo ln -s /usr/lib/i386-linux-gnu/libGLU.so.1 /usr/lib/i386-linux-gnu/libGLU.so
   - sudo ln -s /usr/include/x86_64-linux-gnu/zconf.h /usr/include
-
 install:
   - chmod +x ./ci-build.sh
   - curl -L https://github.com/fundies/enigma-libs/files/1347135/enigma-libs.zip > enigma-libs.zip
@@ -93,3 +64,20 @@ env:
   #END LINUX
 script:
   - ./ci-build.sh
+jobs:
+  include:
+    - stage: prepare cache
+      env: UPDATING_CACHE
+      before_install: skip
+      install:
+        - sudo apt-get -qq -y install libboost-dev libboost-iostreams-dev libboost-filesystem-dev
+            libboost-program-options-dev libboost-system-dev
+        - make -j4
+        - make -j4 emake
+      script: skip
+      before_cache:
+        - mv libcompileEGMf.so $HOME/cache
+        - mv emake $HOME/cache
+stages:
+  - prepare cache
+  - test
