--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ script:
 jobs:
   include:
     - stage: prepare cache
-      env: CACHE_NAME=JOB1
+      env: UPDATING_CACHE
       before_install: skip
       install:
         - sudo apt-get -qq -y install libboost-dev libboost-iostreams-dev libboost-filesystem-dev
