--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,15 +23,6 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "XInput"}
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "MediaControlInterface"}
   #END WINDOWS
-cache:
-  - compileEGMf.dll
-  - emake.exe
-  - '%PROGRAMDATA%\ENIGMA'
-init:
-  # job numbers are 1-n (i.e. not zero-based)
-  # don't use the cache on the first job so we can build a fresh compileEGMf.dll and emake.exe
-  # then restore it on the subsequent jobs
-  - IF %APPVEYOR_JOB_NUMBER% == 1 (set APPVEYOR_CACHE_SKIP_RESTORE=true)
 install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
@@ -48,8 +39,15 @@ install:
     mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
-  - IF NOT EXIST compileEGMf.dll make -j 4
-  - IF NOT EXIST emake.exe bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
+  - IF %APPVEYOR_JOB_NUMBER% == 1 (
+      make -j 4;
+      make -j 4 emake;
+      7z a blobs.zip compileEGMf.dll emake.exe;
+      appveyor PushArtifact blobs.zip;
+    ) ELSE (
+      curl https://ci.appveyor.com/api/projects/RobertBColton/enigma-dev/artifacts/blobs.zip;
+      7z x blobs.zip;
+    )
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
