--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,14 +39,15 @@ install:
     mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
-  - IF %APPVEYOR_JOB_NUMBER% == 1 (
-      make -j4;
-      make -j4 emake;
-      7z a blobs.zip compileEGMf.dll emake.exe;
-      appveyor PushArtifact blobs.zip;
+  - >
+    IF %APPVEYOR_JOB_NUMBER% == 1 (
+      make -j 4
+      make -j 4 emake
+      7z a blobs.zip compileEGMf.dll emake.exe
+      appveyor PushArtifact blobs.zip
     ) ELSE (
-      curl https://ci.appveyor.com/api/projects/RobertBColton/enigma-dev/artifacts/blobs.zip;
-      7z x blobs.zip;
+      curl https://ci.appveyor.com/api/projects/RobertBColton/enigma-dev/artifacts/blobs.zip
+      7z x blobs.zip
     )
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
