--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,7 +46,11 @@ install:
       appveyor PushArtifact blobs.zip
     ) ELSE (
       echo %APPVEYOR_PROJECT_SLUG% &&
-      curl -O -J https://ci.appveyor.com/api/projects/%APPVEYOR_PROJECT_SLUG%/artifacts/blobs.zip &&
+      echo %APPVEYOR_PROJECT_ID% &&
+      echo %APPVEYOR_PROJECT_NAME% &&
+      echo %APPVEYOR_ACCOUNT_NAME% &&
+      echo %APPVEYOR_API_URL% &&
+      curl -O -J https://ci.appveyor.com/api/projects/%APPVEYOR_ACCOUNT_NAME%/%APPVEYOR_PROJECT_SLUG%/artifacts/blobs.zip &&
       7z x blobs.zip
     )
 build_script:
