--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,7 +51,7 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - IF %APPVEYOR_JOB_NUMBER% == 1 (
       make -j 4 &&
-      bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake" &&
+      bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
       #7z a blobs.zip compileEGMf.dll emake.exe &&
       #appveyor PushArtifact blobs.zip
     ) ELSE (
