--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,13 +25,14 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "MediaControlInterface"}
   #END WINDOWS
 cache:
-  - %APPVEYOR_CACHE_NAME%\compileEGMf.dll
-  - %APPVEYOR_CACHE_NAME%\emake.exe
-  - %APPVEYOR_CACHE_NAME%\'%PROGRAMDATA%\ENIGMA'
+  - compileEGMf.dll
+  - emake.exe
+  - %PROGRAMDATA%\ENIGMA
 init:
   # job numbers are 1-n (i.e. not zero-based)
   # don't use the cache on the first job so we can build a fresh compileEGMf.dll and emake.exe
   # then restore it on the subsequent jobs
+  - echo %APPVEYOR_CACHE_NAME%
   - IF %APPVEYOR_JOB_NUMBER% == 1 (set APPVEYOR_CACHE_SKIP_RESTORE=true)
 install:
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
