--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,14 @@
 shallow_clone: true
 # disable automatic tests 
 test: off
+artifacts:
+  - path: compileEGMf.dll
+    type: zip
+  - path: emake.exe
+    type: zip
 
 environment:
   OUTPUT: /tmp/test.exe
-  APPVEYOR_CACHE_NAME: blobs
   matrix:
   #BEGIN WINDOWS
     # Game Modes
@@ -24,19 +28,21 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "XInput"}
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "MediaControlInterface"}
   #END WINDOWS
-cache:
-  - compileEGMf.dll
-  - emake.exe
-  - '%PROGRAMDATA%\ENIGMA'
-init:
-  # job numbers are 1-n (i.e. not zero-based)
-  # don't use the cache on the first job so we can build a fresh compileEGMf.dll and emake.exe
-  # then restore it on the subsequent jobs
-  - echo %APPVEYOR_CACHE_NAME%
-  - cd %APPVEYOR_CACHE_NAME%
-  - dir
-  - IF %APPVEYOR_JOB_NUMBER% == 1 (set APPVEYOR_CACHE_SKIP_RESTORE=true)
 install:
+  - echo %APPVEYOR_JOB_ID%
+  - echo %APPVEYOR_JOB_NAME%
+  - echo %APPVEYOR_JOB_NUMBER%
+  - echo %APPVEYOR_BUILD_ID%
+  - echo %APPVEYOR_BUILD_NAME%
+  - echo %APPVEYOR_BUILD_NUMBER%
+  - echo %APPVEYOR_BUILD_FOLDER%
+  - echo %APPVEYOR_BUILD_VERSION%
+  - echo %APPVEYOR_PROJECT_ID%
+  - echo %APPVEYOR_PROJECT_NAME%
+  - echo %APPVEYOR_PROJECT_SLUG%
+  - echo %APPVEYOR_ACCOUNT_NAME%
+  - echo %APPVEYOR_PULL_REQUEST_HEAD_COMMIT%
+  - echo %APPVEYOR_API_URL%
   - set PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
@@ -52,8 +58,15 @@ install:
     mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
-  - IF NOT EXIST compileEGMf.dll make -j 4
-  - IF NOT EXIST emake.exe bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
+  - IF %APPVEYOR_JOB_NUMBER% == 1 (
+      make -j 4 &&
+      bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
+      7z a blobs.zip compileEGMf.dll emake.exe &&
+      appveyor PushArtifact blobs.zip
+    ) ELSE (
+      curl -O -J https://ci.appveyor.com/api/buildjobs/%APPVEYOR_BUILD_ID%/artifacts/blobs.zip &&
+      7z x blobs.zip
+    )
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
