--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,7 +45,8 @@ install:
       appveyor PushArtifact blobs.zip
     ) ELSE (
       set blobsURL=https://ci.appveyor.com/api/projects/%APPVEYOR_ACCOUNT_NAME%/%APPVEYOR_PROJECT_SLUG%/artifacts/blobs.zip?all=true^&job=Environment%3A%20COMPILER%3Dgcc%2C%20PLATFORM%3DWin32%2C%20MODE%3DRun%2C%20GRAPHICS%3DDirect3D9%2C%20AUDIO%3DNone%2C%20COLLISION%3DNone%2C%20NETWORK%3DNone%2C%20WIDGETS%3DNone%2C%20EXTENSIONS%3DNone &&
-      curl -fsS -o blobs.zip %blobsURL% &&
+      echo %blobsURL% &&
+      curl -fsS %blobsURL% -o blobs.zip &&
       dir &&
       7z x blobs.zip
     )
