--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ shallow_clone: true
 test: off
 environment:
   OUTPUT: /tmp/test.exe
-  BLOBS_URL=https://ci.appveyor.com/api/projects/%APPVEYOR_ACCOUNT_NAME%/%APPVEYOR_PROJECT_SLUG%/artifacts/blobs.zip?all=true^&job=Environment%3A%20COMPILER%3Dgcc%2C%20PLATFORM%3DWin32%2C%20MODE%3DRun%2C%20GRAPHICS%3DDirect3D9%2C%20AUDIO%3DNone%2C%20COLLISION%3DNone%2C%20NETWORK%3DNone%2C%20WIDGETS%3DNone%2C%20EXTENSIONS%3DNone
+  BLOBS_URL: https://ci.appveyor.com/api/projects/%APPVEYOR_ACCOUNT_NAME%/%APPVEYOR_PROJECT_SLUG%/artifacts/blobs.zip?all=true&job=Environment%3A%20COMPILER%3Dgcc%2C%20PLATFORM%3DWin32%2C%20MODE%3DRun%2C%20GRAPHICS%3DDirect3D9%2C%20AUDIO%3DNone%2C%20COLLISION%3DNone%2C%20NETWORK%3DNone%2C%20WIDGETS%3DNone%2C%20EXTENSIONS%3DNone
   matrix:
   #BEGIN WINDOWS
     # Game Modes
@@ -46,7 +46,7 @@ install:
       appveyor PushArtifact blobs.zip
     ) ELSE (
       echo %BLOBS_URL% &&
-      curl %BLOBS_URL% -fsS -o blobs.zip &&
+      curl "%BLOBS_URL%" -fsS -o blobs.zip &&
       dir &&
       7z x blobs.zip
     )
