--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,6 +46,7 @@ install:
       appveyor PushArtifact blobs.zip
     ) ELSE (
       echo %BLOBS_URL% &&
+      echo "curl %BLOBS_URL% -o blobs.zip"
       curl %BLOBS_URL% -o blobs.zip &&
       dir &&
       7z x blobs.zip
