--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,7 @@ install:
     ) ELSE (
       echo %BLOBS_URL% &&
       echo "curl %BLOBS_URL% -o blobs.zip"
+      echo curl %BLOBS_URL% -o blobs.zip
       curl %BLOBS_URL% -o blobs.zip &&
       dir &&
       7z x blobs.zip
