--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,9 +46,9 @@ install:
       appveyor PushArtifact blobs.zip
     ) ELSE (
       echo %BLOBS_URL% &&
-      echo "curl %BLOBS_URL% -o blobs.zip"
-      echo curl %BLOBS_URL% -o blobs.zip
-      curl %BLOBS_URL% -o blobs.zip &&
+      echo "curl %BLOBS_URL% -o blobs.zip" &&
+      echo curl %BLOBS_URL% -o blobs.zip &&
+      curl -L %BLOBS_URL% > blobs.zip &&
       dir &&
       7z x blobs.zip
     )
