--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,9 +45,7 @@ install:
       7z a blobs.zip compileEGMf.dll emake.exe &&
       appveyor PushArtifact blobs.zip
     ) ELSE (
-      echo %BLOBS_URL% &&
-      echo "curl %BLOBS_URL% -o blobs.zip" &&
-      echo curl %BLOBS_URL% -o blobs.zip &&
+      echo curl -L %BLOBS_URL% > blobs.zip &&
       curl -L %BLOBS_URL% > blobs.zip &&
       dir &&
       7z x blobs.zip
