--- a/appveyor.yml
+++ b/appveyor.yml
@@ -49,7 +49,7 @@ install:
       appveyor PushArtifact blobs.zip -Type Zip
     ) ELSE (
       echo curl -L %BLOBS_URL% > blobs.zip &&
-      curl --ftp-pret -L %BLOBS_URL% -o blobs.zip &&
+      curl --include --ftp-pret -L %BLOBS_URL% -o blobs.zip &&
       dir &&
       7z x blobs.zip
     )
