--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,18 +44,18 @@ install:
     mingw-w64-x86_64-sfml mingw-w64-x86_64-gtk2 mingw-w64-x86_64-box2d mingw-w64-x86_64-bullet
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
-  - |-
-      IF %APPVEYOR_JOB_NUMBER% == 1 (
-      bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4" &&
-      bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake" &&
-      7z a blobs.zip compileEGMf.dll emake.exe &&
+  - |
+    IF %APPVEYOR_JOB_NUMBER% == 1 (
+      bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4"
+      bash -lc "cd $APPVEYOR_BUILD_FOLDER; make -j 4 emake"
+      7z a blobs.zip compileEGMf.dll emake.exe
       appveyor PushArtifact blobs.zip -Type Zip
-      ) ELSE (
-      echo curl -L %BLOBS_URL% > blobs.zip &&
-      appveyor DownloadFile %BLOBS_URL% -FileName blobs.zip &&
-      dir &&
+    ) ELSE (
+      echo curl -L %BLOBS_URL% > blobs.zip
+      appveyor DownloadFile %BLOBS_URL% -FileName blobs.zip 
+      dir
       7z x blobs.zip
-      )
+    )
 build_script:
   # AppVeyor overrides PLATFORM because it's part of its API
   - bash -lc "cd $APPVEYOR_BUILD_FOLDER; export PLATFORM=%PLATFORM%; ./ci-build.sh"
