--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,6 +45,7 @@ install:
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: >-
+      cd $env:APPVEYOR_BUILD_FOLDER
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
         make -j 4
         make -j 4 emake
