--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,9 +29,7 @@ environment:
     - {COMPILER: gcc, PLATFORM: Win32, MODE: Debug, GRAPHICS: Direct3D9, AUDIO: None, COLLISION: None, NETWORK: None, WIDGETS: None, EXTENSIONS: "MediaControlInterface"}
   #END WINDOWS
 install:
-  - cmd: bash -ilc "cd "%APPVEYOR_BUILD_FOLDER%""
-  - ps: bash -ilc "cd "%APPVEYOR_BUILD_FOLDER%""
-  - bash -ilc "cd ^"%APPVEYOR_BUILD_FOLDER%^""
+  - bash -ilc "cd $APPVEYOR_BUILD_FOLDER"
   - set PATH=%APPVEYOR_BUILD_FOLDER%;c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
