--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,9 +47,8 @@ install:
   - gcc -v
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
-      du 2> $null
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        bash -ic "export TERM=ansi; set TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4"
+        bash -ic "export TERM=ansi; set TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4" 2> $null
         dir
         bash -ic "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4 emake"
         7z a blobs.zip compileEGMf.dll emake.exe
