--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,9 +48,9 @@ install:
   - cd %APPVEYOR_BUILD_FOLDER%
   - ps: |
       If ($env:APPVEYOR_JOB_NUMBER -eq 1) {
-        bash -ic "export TERM=ansi; set TERM=ansi; cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4" 2> $null
+        bash -ic "export TERM=ansi; set TERM=ansi; cd $env:APPVEYOR_BUILD_FOLDER; make -j 4" 2> $null
         dir
-        bash -ic "cd '$env:APPVEYOR_BUILD_FOLDER'; make -j 4 emake"
+        bash -ic "cd $env:APPVEYOR_BUILD_FOLDER; make -j 4 emake"
         7z a blobs.zip compileEGMf.dll emake.exe
         appveyor PushArtifact blobs.zip -Type Zip
       } Else {
