--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,29 +28,15 @@ environment:
 install:
   - echo "%APPVEYOR_API_URL%"
   - echo "%APPVEYOR_JOB_ID%"
-  - echo %APPVEYOR_JOB_ID%
   - echo "%CACHE_JOB%"
-  - echo %CACHE_JOB%
-  - echo "$(CACHE_JOB)"
-  - echo $(CACHE_JOB)
-  - echo "${CACHE_JOB}"
-  - echo ${CACHE_JOB}
-  - echo "$CACHE_JOB"
-  - echo $CACHE_JOB
-  - echo "%APPVEYOR_API_URL%"
-  - echo "%APPVEYOR_JOB_ID%"
-  - echo %APPVEYOR_JOB_ID%
-  - echo "%APPVEYOR_API_URL%" &&
-    echo "%APPVEYOR_JOB_ID%" &&
-    echo %APPVEYOR_JOB_ID% &&
-    set HEYHEYHEY=!APPVEYOR_JOB_ID! &&
+  - set HEYHEYHEY=!APPVEYOR_JOB_ID! &&
     echo "%HEYHEYHEY%" &&
-    echo ${HEYHEYHEY} &&
-    echo $HEYHEYHEY &&
+    set HEYHEYHEY=%APPVEYOR_JOB_ID% &&
+    echo "%HEYHEYHEY%" &&
+    setx HEYHEYHEY=%APPVEYOR_JOB_ID% &&
+    echo "%HEYHEYHEY%" &&
     appveyor SetVariable -Name "HEYHEYHEY" -Value !APPVEYOR_JOB_ID! &&
-    echo "%HEYHEYHEY%" &&
-    echo ${HEYHEYHEY} &&
-    echo $HEYHEYHEY
+    echo "%HEYHEYHEY%"
   - setx PATH=c:\msys64;C:\msys64\mingw64\bin;c:\msys64\usr\bin;%PATH%
   - set MSYSTEM=MINGW64
   - set MSYSTEM_PREFIX=/mingw64
